fear(*): fix small small spacing issues on content

--- a/scss/components/_films.scss
+++ b/scss/components/_films.scss
@@ -17,8 +17,4 @@
 	height:100%;
 }
 
-.title{
-margin-bottom:0;
-margin-top:1em;
-}
 
